--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,12 @@
 * {
     margin: 0;
     padding: 0;
-}
-  
+}  
    
+a { 
+    text-decoration: none;
+} 
+
 body, html {
     width: 100%;
     height: 100%; 
@@ -22,7 +25,7 @@ body {
 }
   
 .box .glitch { 
-    color: #fff;
+    color: rgba(255, 255, 255, 0.767);
     font-family: "Poppins", sans-serif;
     font-weight: 600;
     font-size: 100px;
